tests/unit/language/errors/undefined_archetype.arche
[10] UndefinedArch;
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -q "unknown archetype" %t.out

@allow_pure_proc
main :: proc() {
}
